--- a/pages/sample/structure-search.html
+++ b/pages/sample/structure-search.html
@@ -14,7 +14,7 @@ permalink: "structure/search.html"
     <li><a href="/structure.html" id="navigation-list">Strucutral components</a>
      <ul>
       <li><a href="/structure/utility-header.html">Utility header</a></li>
-      <li><a href="/structure/settings-bar.html">Settings bar</a></li>
+      <li><a href="/structure/settings-bar.html">Settings</a></li>
       <!-- <li><a href="/structure/mobile-controls.html">Mobile controls</a></li> -->
       <li><a href="/structure/site-header.html">Site header</a></li>
       <li><a href="/structure/search.html" class="active">Search</a>
@@ -56,7 +56,7 @@ permalink: "structure/search.html"
      <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
     <li class="nav-item">
-     <a id="tab-include1" href="#pane-include1" class="nav-link" data-bs-toggle="tab" role="tab">Nunjucks Include</a>
+     <a id="tab-include1" href="#pane-include1" class="nav-link" data-bs-toggle="tab" role="tab">Nunjucks include</a>
     </li>
    </ul>
 
@@ -103,7 +103,7 @@ permalink: "structure/search.html"
       <h4 class="my-0 w-100">
        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include1" data-parent="#tab-include1"
         aria-expanded="false" aria-controls="collapse-include1" title="Nunjucks Include tab header">
-        Nunjucks Include
+        Nunjucks include
        </a>
       </h4>
      </div>
@@ -159,7 +159,7 @@ permalink: "structure/search.html"
      <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
     <li class="nav-item">
-     <a id="tab-include2" href="#pane-include2" class="nav-link" data-bs-toggle="tab" role="tab">Nunjucks Include</a>
+     <a id="tab-include2" href="#pane-include2" class="nav-link" data-bs-toggle="tab" role="tab">Nunjucks include</a>
     </li>
    </ul>
 
@@ -209,7 +209,7 @@ permalink: "structure/search.html"
       <h4 class="my-0 w-100">
        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include2" data-parent="#tab-include2"
         aria-expanded="false" aria-controls="collapse-include2" title="Nunjucks Include tab header">
-        Nunjucks Include
+        Nunjucks include
        </a>
       </h4>
      </div>
@@ -270,7 +270,7 @@ permalink: "structure/search.html"
      <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
     <li class="nav-item">
-     <a id="tab-include3" href="#pane-include3" class="nav-link" data-bs-toggle="tab" role="tab">Nunjucks Include</a>
+     <a id="tab-include3" href="#pane-include3" class="nav-link" data-bs-toggle="tab" role="tab">Nunjucks include</a>
     </li>
    </ul>
 
@@ -319,7 +319,7 @@ permalink: "structure/search.html"
       <h4 class="my-0 w-100">
        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include3" data-parent="#tab-include3"
         aria-expanded="false" aria-controls="collapse-include3" title="Nunjucks Include tab header">
-        Nunjucks Include
+        Nunjucks include
        </a>
       </h4>
      </div>
