--- a/pages/sample/structure-utility-header.html
+++ b/pages/sample/structure-utility-header.html
@@ -11,7 +11,7 @@ permalink: "structure/utility-header.html"
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/structure.html" id="navigation-list">Strucutral components</a>
+    <li><a href="/structure.html" id="navigation-list">Strucutral elements</a>
      <ul>
       <li><a href="/structure/utility-header.html" class="active">Utility header</a></li>
       <li><a href="/structure/settings-bar.html">Settings</a></li>
