--- a/pages/sample/form-elements.html
+++ b/pages/sample/form-elements.html
@@ -157,7 +157,7 @@ permalink: "components/form-elements.html"
      </div>
 
 
-     <div class="bg-gray-50 p-a">
+     <div class="bg-gray-50 p-a m-t-md">
       <h3 class="h4 m-t-0">Required</h3>
       <div class="row">
        <div class="col-sm-3">
