fixed structure page

--- a/pages/structure.html
+++ b/pages/structure.html
@@ -14,7 +14,7 @@ permalink: "structure.html"
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/structure.html" id="navigation-list" class="active">Strucutral elements</a>
+    <li><a href="/structure.html" id="navigation-list" class="active">Structural elements</a>
      <ul>
       <li><a href="/structure/utility-header.html">Utility header</a></li>
       <li><a href="/structure/settings-bar.html">Settings</a></li>
@@ -83,7 +83,6 @@ permalink: "structure.html"
      </div>
      <div id="collapse-html2" class="collapse" role="tabpanel" aria-labelledby="heading-html2">
       <div class="card-body">
-       <h3 class="h4 m-t-0">HTML</h3>
        <pre class="copy-code"><span class="text-success">&lt;!doctype html&gt;</span>
         <span class="text-accent-p2">&lt;html</span> <span class="text-info">lang=</span><span class="text-accent7">"en"</span><span class="text-accent-p2">&gt;</span>
            <span class="text-accent-p2">&lt;head&gt;</span>
@@ -131,7 +130,7 @@ permalink: "structure.html"
 
 
 
-  <h2>Strucutral components</h2>
+  <h2>Structural elements</h2>
 
 
   <div class="row">
