Themes, more changes 512

--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -29,7 +29,7 @@ permalink: "visual-design/color.html"
     <h2 id="AddAColorTheme">Add a color theme</h2>
     <p>There are two ways to customize your main theme colors.</p>
     <ul>
-      <li>Change the primary and secondary theme color variables in the CSS file. Instructions can be found in the readme file.</li>
+      <li>Change the primary and secondary theme color variables in the SASS file (/src/scss/colortheme/oceanside.scss). Instructions can be found in the readme file.</li>
       <li>Manually find and replace your main theme colors and their variations in the CSS file.</li>
     </ul>
     <p>Use meaningful colors to visually communicate what people need to see.</p>
