--- a/pages/sample/buttons.html
+++ b/pages/sample/buttons.html
@@ -51,7 +51,7 @@ permalink: "components/buttons.html"
           <p class="lead bold m-b">Disabled buttons</p>
           {% include "../../src/_includes/modules/buttons-disabled.html" %}
 
-          <p class="lead bold m-b">Buttons sizes</p>
+          <p class="lead bold m-b">Button sizes</p>
           {% include "../../src/_includes/modules/buttons-sizes.html" %}
         </div>
       </div>
@@ -91,6 +91,7 @@ permalink: "components/buttons.html"
 <h2 id="Usage">Usage</h2>
 <h3>When and how to use it </h3>
 <p>Use buttons to communicate actions users can take to interact with a page. Buttons should be used consistently for the same types of tasks.</p>
+
 <p>A primary action button (filled in button) has the highest emphasis. Try to limit the number of primary action buttons on a page as they are distracting.</p>
 
 <p>The secondary action button (outlined button) has a lower emphasis, but should still be used sparingly.</p>
