updated sitemap lonk in 404 page #518

--- a/pages/404.html
+++ b/pages/404.html
@@ -13,7 +13,7 @@ permalink: "404.html"
   <ul>
    <li>Browse our <a href="/">homepage</a></li>
    <li>Double check that link</li>
-   <li>Use our <a href="/serp.html">search</a> or the <a href="/sitemap.xml">site map</a></li>
+   <li>Use our <a href="/serp.html">search</a> or the <a href="/sitemap.html">sitemap</a></li>
    <li>Check out these popular links:
     <ul>
      <li><a href="/visual-design/icons.html">Icons</a></li>
