--- a/pages/sample/banner.html
+++ b/pages/sample/banner.html
@@ -46,10 +46,10 @@ permalink: "patterns/banner.html"
     </a>
    </div>
    <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-    <div class="card-body p-b-lg">
+    <div class="card-body">
 
      {% include "../../src/_includes/modules/banner.html" %}
-
+     <p class="m-t m-b-0 font-size-16">Minimum width: 1600px</p>
     </div>
    </div>
   </div>
@@ -118,7 +118,7 @@ permalink: "patterns/banner.html"
     <div class="card-body p-b">
 
      {% include "../../src/_includes/modules/feature-card.html" %}
-
+     <p class="m-t m-b-0 font-size-16">Maximum width: 1176px</p>
 
     </div>
    </div>
@@ -153,7 +153,7 @@ permalink: "patterns/banner.html"
 <h3 class="m-t">When and how to use it</h3>
 <p>Use the hero banner to catch visitors' attention and highlight the top task or need.</p>
 <p>Place it at the top of the homepage so it appears below the statewide header, site header, and site navigation. Learn
- more in our guidance on <a href="/structure.html">webpage structure</a>.</p>
+ more in our guidance on <a href="/structure.html">Webpage structure</a>.</p>
 <p>Include a concise title, description, image, and at least one button. Choose an image that’s in harmony with your
  brand identity, mission, and tone. The minimum image size is 776 x 517 pixels. For best results, use images with this
  aspect ratio.
