updated settings page #683

--- a/pages/sample/structure-utility-header.html
+++ b/pages/sample/structure-utility-header.html
@@ -133,7 +133,7 @@ permalink: "structure/utility-header.html"
    </div>
   </div>
 
-  <h2>Usage</h2>
+  <h2 id="Usage">Usage</h2>
   <h3>When and how to use it</h3>
 
   <p>The utility header is a required webpage structure component. Place it at the top of the website, above the
