--- a/pages/sample/parallax.html
+++ b/pages/sample/parallax.html
@@ -9,8 +9,8 @@ permalink: "components/parallax.html"
 
 
 <h1 class="mt-lg-0">Parallax</h1>
-<p>The parallax is a visual design component. When scrolling, it allows background and foreground elements to move at
- different speeds, creating a 3D effect. </p>
+<p class="lead">The parallax is a visual design component. When scrolling, it allows background and foreground elements
+ to move at different speeds, creating a 3D effect. </p>
 <h2 id="Sample">Sample</h2>
 
 <!--TABS-->
@@ -37,21 +37,27 @@ permalink: "components/parallax.html"
    </div>
    <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
     <div class="card-body p-b-lg">
-     <div class="parallax-bg height-400" style="background-image: url(/images/background-primary.jpg)">
+
+     <div class="parallax-bg height-400 pos-rel" style="background-image: url(/images/bg-parallax1.jpg)">
+      <img src="/images/parallax1.png" class="pos-abs bottom-0 left-0" alt="parallax overlay">
       <div class="section-impact width-200 height-80 brd-gray-light brd-solid-1 relative-centered">
        <h2 class="h5 text-center m-0 p-a-md relative-centered">SCROLL DOWN</h2>
       </div>
      </div>
-     <div class="parallax-bg height-300" style="background-image: url(/images/bg-open-data.jpg)">
-      <div class="container p-y-lg">
+
+
+     <div class="parallax-bg height-300" style="background-image: url(/images/bg-parallax2.jpg)">
+      <img src="/images/parallax2.png" class="pos-abs top-0 right-0" alt="parallax overlay">
+      <div class="container p-y-lg pos-rel">
        <h2 class="text-center">Parallax Height</h2>
        <p class="text-center">height can be specified by adding height class, such as
-        <code>.height-300</code>
+        <code class="color-black">.height-300</code>
        </p>
       </div>
      </div>
-     <div class="parallax-bg height-300 bg-dark" style="background-image: url(/images/main-banner4.jpg)">
-      <div class="container p-y-lg">
+     <div class="parallax-bg height-300 bg-dark" style="background-image: url(/images/bg-parallax3.jpg)">
+      <img src="/images/parallax3.png" class="pos-abs top-0 left-0" alt="parallax overlay">
+      <div class="container p-y-lg pos-rel">
        <h2 class="text-center color-white">Light Text Color</h2>
        <p class="text-center color-white">Make light text on dark backgrounds by adding class .color-white
        </p>
@@ -83,7 +89,7 @@ permalink: "components/parallax.html"
         <div class="container p-y-lg">
          <h2 class="text-center">Parallax Height</h2>
          <p class="text-center">height can be specified by adding height class, such as
-          <code>.height-300</code>
+          <code class="color-black">.height-300</code>
          </p>
         </div>
        </div>
@@ -108,7 +114,7 @@ permalink: "components/parallax.html"
 <h2 id="Usage">Usage</h2>
 <h3>When and how to use it </h3>
 <p>Use the parallax component to add depth and visual interest to a page. The movement of the parallax component will
- draw attention to the content in that section. </p>
+ draw attention to the content in that section.</p>
 <p>The parallax design component is often used on long-scrolling pages.</p>
 
 <h3>
