--- a/pages/sample/breadcrumb.html
+++ b/pages/sample/breadcrumb.html
@@ -6,7 +6,8 @@ permalink: "components/breadcrumb.html"
 ---
 
 <h1 class="mt-lg-0">Breadcrumb</h1>
-<p>The breadcrumb component helps visitors understand where they are within a website’s structure and move between
+<p class="lead">The breadcrumb component helps visitors understand where they are within a website’s structure and move
+ between
  levels. </p>
 
 
@@ -74,13 +75,13 @@ permalink: "components/breadcrumb.html"
  <li>Steps</li>
 </ul>
 <p>Place breadcrumbs at the top left corner of a page, above the title.</p>
-<p>The breadcrumb should start with your ‘home’ page and end with the H1 of the current page.</p>
+<p>The breadcrumb should start with your 'home' page and end with the H1 of the current page.</p>
 <h3>
  How not to use it
 </h3>
 <p>The breadcrumb component should not replace the main navigation on a page. </p>
-</p>Do not use the breadcrumb component on
-websites with a flat structure. There should be at least two levels of page structure.</p>
+</p>Do not use the breadcrumb component on websites with a flat structure. There should be at least two levels of page
+structure.</p>
 
 
 
