updated table component #697

--- a/pages/components.html
+++ b/pages/components.html
@@ -259,7 +259,7 @@ permalink: "components.html"
   </a>
  </div>
  <div class="col-md-4 m-t-md">
-  <a href="/components/tables.html"
+  <a href="/components/table.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
    title="Social Sharer example">
    <div class="p-a-md d-flex align-content-center">
