coundown page fixes

--- a/pages/sample/countdown-timer.html
+++ b/pages/sample/countdown-timer.html
@@ -67,8 +67,8 @@ permalink: "components/countdown-timer.html"
     </a>
    </div>
    <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-    <div class="card-body p-b-lg">
-     <h3>Countdown default</h3>
+    <div class="card-body">
+     <h3 class="m-t-0">Default</h3>
      <div class="group countdown p-x">
       <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
        <span class="countdown-text">wks<br></span>
@@ -83,17 +83,17 @@ permalink: "components/countdown-timer.html"
        <span id="hours1"></span>
       </div>
       <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
-       <span class="countdown-text">min<br></span>
+       <span class="countdown-text">mins<br></span>
        <span id="minutes1"></span>
       </div>
       <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
-       <span class="countdown-text">sec<br></span>
+       <span class="countdown-text">secs<br></span>
        <span id="seconds1"></span>
       </div>
      </div>
 
 
-     <h3>Countdown primary</h3>
+     <h3>Primary</h3>
      <div class="group countdown p-x">
       <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
        <span class="countdown-text">wks<br></span>
@@ -108,11 +108,11 @@ permalink: "components/countdown-timer.html"
        <span id="hours"></span>
       </div>
       <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
-       <span class="countdown-text">min<br></span>
+       <span class="countdown-text">mins<br></span>
        <span id="minutes"></span>
       </div>
       <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
-       <span class="countdown-text">sec<br></span>
+       <span class="countdown-text">secs<br></span>
        <span id="seconds"></span>
       </div>
      </div>
@@ -134,7 +134,7 @@ permalink: "components/countdown-timer.html"
    </div>
    <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
     <div class="card-body">
-     <h3>Countdown default</h3>
+     <h3 class="m-t-0">Default</h3>
      <pre style="max-height: 300px;"><code><!--HTML-->
       <div class="group countdown p-x">
        <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
@@ -150,11 +150,11 @@ permalink: "components/countdown-timer.html"
         <span id="hours1"></span>
        </div>
        <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
-        <span class="countdown-text">min<br></span>
+        <span class="countdown-text">mins<br></span>
         <span id="minutes1"></span>
        </div>
        <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
-        <span class="countdown-text">sec<br></span>
+        <span class="countdown-text">secs<br></span>
         <span id="seconds1"></span>
        </div>
       </div>
@@ -198,7 +198,7 @@ permalink: "components/countdown-timer.html"
          </pre>
 
 
-     <h3>Countdown primary</h3>
+     <h3>Primary</h3>
      <pre style="max-height: 300px;"><code><!--HTML-->
       <div class="group countdown p-x">
        <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
@@ -214,11 +214,11 @@ permalink: "components/countdown-timer.html"
         <span id="hours"></span>
        </div>
        <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
-        <span class="countdown-text">min<br></span>
+        <span class="countdown-text">mins<br></span>
         <span id="minutes"></span>
        </div>
        <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
-        <span class="countdown-text">sec<br></span>
+        <span class="countdown-text">secs<br></span>
         <span id="seconds"></span>
        </div>
       </div>
