--- a/pages/sample/breadcrumb.html
+++ b/pages/sample/breadcrumb.html
@@ -36,7 +36,7 @@ permalink: "components/breadcrumb.html"
     </a>
    </div>
    <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-    <div class="card-body p-b-md">
+    <div class="card-body p-y-0 p-t-md">
      {% include "../../src/_includes/modules/breadcrumb.html" %}
     </div>
    </div>
