updated form elements

--- a/pages/sample/form-elements.html
+++ b/pages/sample/form-elements.html
@@ -35,7 +35,7 @@ permalink: "components/form-elements.html"
  <li>Label</li>
  <li>Text field</li>
  <li>Text area</li>
- <li>Checkboxe</li>
+ <li>Checkbox</li>
  <li>Radio button</li>
  <li>Dropdown menu</li>
  <li>File input</li>
