--- a/pages/sample/parallax.html
+++ b/pages/sample/parallax.html
@@ -36,7 +36,7 @@ permalink: "components/parallax.html"
     </a>
    </div>
    <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-    <div class="card-body p-b-lg">
+    <div class="card-body">
 
      <div class="parallax-bg height-400 pos-rel" style="background-image: url(/images/bg-parallax1.jpg)">
       <img src="/images/parallax1.png" class="pos-abs bottom-0 left-0" alt="parallax overlay">
