--- a/pages/sample/structure-mobile-controls.html
+++ b/pages/sample/structure-mobile-controls.html
@@ -15,8 +15,8 @@ permalink: "structure/mobile-controls.html"
      <ul>
       <li><a href="/structure/utility-header.html">Utility header</a></li>
       <li><a href="/structure/settings-bar.html">Settings</a></li>
-      <!-- <li><a href="/structure/mobile-controls.html" class="active">Mobile controls</a></li> -->
       <li><a href="/structure/site-header.html">Site header</a></li>
+      <li><a href="/structure/mobile-controls.html" class="active">Mobile controls</a></li>
       <li><a href="/structure/search.html">Search</a></li>
       <li><a href="/structure/site-navigation.html">Site navigation</a></li>
       <li><a href="/structure/footer.html">Footer</a></li>
