--- a/pages/sample/structure-settings-bar.html
+++ b/pages/sample/structure-settings-bar.html
@@ -21,8 +21,8 @@ permalink: "structure/settings-bar.html"
         <li><a href="#Accessibility">Accessibility</a></li>
        </ul>
       </li>
-      <!-- <li><a href="/structure/mobile-controls.html">Mobile controls</a></li> -->
       <li><a href="/structure/site-header.html">Site header</a></li>
+      <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
       <li><a href="/structure/search.html">Search</a></li>
       <li><a href="/structure/site-navigation.html">Site navigation</a></li>
       <li><a href="/structure/footer.html">Footer</a></li>
