--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -51,7 +51,7 @@ permalink: "visual-design/typography.html"
 
     <h2 id="Fontcode">Font code</h2>
 
-    <table id="fontcodetable" class="font-size-80x">
+    <table id="fontcodetable" class="">
       <thead>
         <tr>
           <th>Name</th>
@@ -67,7 +67,7 @@ permalink: "visual-design/typography.html"
         </tr>
         <tr>
           <td>Lead paragraph</td>
-          <td>Use for the intro paragraph on a webpage.</td>
+          <td class="lead">Use for the intro paragraph on a webpage.</td>
           <td>Class: .lead<br>
             Code: font-size: calc(1.25rem + 0.1vw);</td>
         </tr>
@@ -78,7 +78,7 @@ permalink: "visual-design/typography.html"
         </tr>
         <tr>
           <td>Small-text paragraph</td>
-          <td>Use for ??? form field formatting tips and error messages?</td>
+          <td class="small">Use for ??? form field formatting tips and error messages?</td>
           <td>Class: .small<br>
             Code: font-size: calc(1rem + 0.1vw);</td>
         </tr>
