updated search and mobile controls #684 #714

--- a/pages/sample/structure-mobile-controls.html
+++ b/pages/sample/structure-mobile-controls.html
@@ -73,7 +73,11 @@ permalink: "structure/mobile-controls.html"
      <div id="collapse-example2" class="collapse show" role="tabpanel" aria-labelledby="heading-example2">
       <div class="card-body">
        <h3 class="h4 m-t-0">Mobile</h3>
-       <img src="/images/components/strucutre-mobile-controls.jpg" alt="Mobile Controls screenshot" class="img-fluid">
+       <div class="col-md-6">
+        <img src="/images/components/strucutre-site-header-mobile.jpg" alt="Mobile Controls screenshot"
+         class="img-fluid">
+       </div>
+
       </div>
      </div>
     </div>
