--- a/pages/sample/blockquote.html
+++ b/pages/sample/blockquote.html
@@ -1,8 +1,8 @@
 ﻿---
-title: Blockquotes
+title: Blockquote
 landing: Components
 layout: components.njk
-permalink: "components/blockquotes.html"
+permalink: "components/blockquote.html"
 ---
 
 <style>
@@ -10,8 +10,9 @@ permalink: "components/blockquotes.html"
 </style>
 
 <h1 class="mt-lg-0">Blockquote</h1>
-<p>A blockquote emphasizes quotes or excerpts related to the page content.</p>
-<p>Blockquote text is styled differently from the main text and is typically used for important quotations.</p>
+<p class="lead">A blockquote emphasizes quotes or excerpts related to the page content.</p>
+<p class="lead">Blockquote text is styled differently from the main text and is typically used for important quotations.
+</p>
 
 <h2 id="Basic-blockquote">Basic blockquote</h2>
 
@@ -38,10 +39,11 @@ permalink: "components/blockquotes.html"
     </a>
    </div>
    <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-    <div class="card-body p-b-lg">
-
+    <div class="card-body p-b-sm">
+     <h3 class="h4 m-t-0">With graphic</h3>
      {% include "../../src/_includes/modules/blockquote.html" %}
-
+     <h3 class="h4">Without graphic</h3>
+     {% include "../../src/_includes/modules/blockquote-no-graphic.html" %}
     </div>
    </div>
   </div>
@@ -58,9 +60,12 @@ permalink: "components/blockquotes.html"
    </div>
    <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
     <div class="card-body">
+     <h3 class="h4 m-t-0">With graphic</h3>
      <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/blockquote.html" %}</code>
     </pre>
-
+     <h3 class="h4">Without graphic</h3>
+     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/blockquote-no-graphic.html" %}</code>
+   </pre>
     </div>
    </div>
   </div>
@@ -161,7 +166,7 @@ permalink: "components/blockquotes.html"
     </a>
    </div>
    <div id="collapse-example2" class="collapse show" role="tabpanel" aria-labelledby="heading-example2">
-    <div class="card-body p-b-lg">
+    <div class="card-body p-b-sm">
 
 
      {% include "../../src/_includes/modules/blockquote-pull.html" %}
@@ -221,12 +226,8 @@ permalink: "components/blockquotes.html"
     </a>
    </div>
    <div id="collapse-example3" class="collapse show" role="tabpanel" aria-labelledby="heading-example3">
-    <div class="card-body p-b">
-
-
+    <div class="card-body p-b-sm">
      {% include "../../src/_includes/modules/blockquote-prominent.html" %}
-
-
     </div>
    </div>
   </div>
