--- a/pages/sample/parallax.html
+++ b/pages/sample/parallax.html
@@ -40,17 +40,19 @@ permalink: "components/parallax.html"
 
      <div class="parallax-bg height-400 pos-rel" style="background-image: url(/images/bg-parallax1.jpg)">
       <img src="/images/parallax1.png" class="pos-abs bottom-0 left-0" alt="parallax overlay">
-      <div class="section-impact width-200 height-80 brd-gray-light brd-solid-1 relative-centered">
-       <h2 class="h5 text-center m-0 p-a-md relative-centered">SCROLL DOWN</h2>
-      </div>
+
+      <h2
+       class="h3 text-center color-white m-0 p-a-md relative-centered width-30pct brd-gray-light brd-solid-1 relative-centered bg-alpha-50">
+       Scroll down</h2>
+
      </div>
 
 
      <div class="parallax-bg height-300" style="background-image: url(/images/bg-parallax2.jpg)">
       <img src="/images/parallax2.png" class="pos-abs top-0 right-0" alt="parallax overlay">
       <div class="container p-y-lg pos-rel">
-       <h2 class="text-center">Parallax Height</h2>
-       <p class="text-center">height can be specified by adding height class, such as
+       <h2 class="h3 text-center">Parallax height</h2>
+       <p class="text-center">Height can be specified by adding height class, such as
         <code class="color-black">.height-300</code>
        </p>
       </div>
@@ -58,7 +60,7 @@ permalink: "components/parallax.html"
      <div class="parallax-bg height-300 bg-dark" style="background-image: url(/images/bg-parallax3.jpg)">
       <img src="/images/parallax3.png" class="pos-abs top-0 left-0" alt="parallax overlay">
       <div class="container p-y-lg pos-rel">
-       <h2 class="text-center color-white">Light Text Color</h2>
+       <h2 class="h3 text-center color-white">Light text color</h2>
        <p class="text-center color-white">Make light text on dark backgrounds by adding class .color-white
        </p>
       </div>
