--- a/pages/about.html
+++ b/pages/about.html
@@ -5,72 +5,62 @@ permalink: "about.html"
 ---
 
 <div class="row">
+ <div class="col-md-3" role="complementary">
+  <!-- Side navigation -->
+  <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
+   <ul class="list-navigation">
+    <li><a href="/about.html" id="navigation-list" class="active">About</a>
+     <ul>
+      <li><a href="#Our-mission">Our mission</a></li>
+      <li><a href="#Our-vision">Our vision</a></li>
+      <li><a href="#History">History</a></li>
+      <li><a href="#Looking-ahead">Looking ahead </a></li>
+     </ul>
+    </li>
+   </ul>
+  </nav>
+ </div>
 
+ <article class="col-md-9 m-b-lg">
+  <h1 class="mt-lg-0">About the State Web Template</h1>
+  <p class="lead">Digitally connecting Californians to the government services they need has become increasingly more
+   critical. Great design is central to succeeding in that effort. We offer this web template to help make digital
+   information and services easier to use. </p>
+  <p>The State Web Template is an open source web template maintained by the Office of Digital Services within the
+   Department of Technology. Our components are designed to enhance the user experience and help digital teams create
+   attractive, consistent, and accessible digital products. The State Web Template will always be open source,
+   collaborative and evolving. </p>
 
- <article class="half p-l-0">
-  <h1 class="mt-lg-0">State Template v6</h1>
-  <p>The California State Template is an open source web template and standard offered by the
-   California Department of Technology to state agencies and departments within the State of
-   California and beyond. </p>
-  <p>As part of this release GitHub is leveraged to provide and encourage better collaboration.
-   The California state template is open sourced and belongs to the California web community
-   and participation is welcome. </p>
+  <h2 id="Our-mission">Our mission</h2>
+  <p>Enhance the delivery of digital services for California residents through user experience design. </p>
 
+  <h2 id="Our-vision">Our vision</h2>
+  <p>Create excellent digital state services for California residents that are inclusive, accessible and performant.</p>
 
-  <p>
-   The v6 release there will be several versions available namely HTML/Dreamweaver, .NET
-   (MVC, Core), and WordPress.
+  <h2 id="History">History</h2>
+  <p>A long time ago, the eServices Office was established to lead statewide initiatives providing leadership in
+   statewide web policy, CA.gov portal and the digital government footprint. We have come a long way but our core vision
+   and mission has not changed.</p>
+  <p>The creation of a statewide web template was a strategy and framework to align on California's digital touchpoint.
+   The state web template has evolved from a technical toolset to a digital standard and tactical playbook on delivering
+   useful, accessible, and performant user experiences.</p>
+
+  <h2 id="Looking-ahead ">Looking ahead</h2>
+  <p>Over the years, and with each state web template release, we've improved the access of online government services
+   with:</p>
+  <ul>
+   <li>Updated best practices</li>
+   <li>Responsive design elements</li>
+   <li>Web accessibility</li>
+   <li>Improved performance</li>
+  </ul>
+  <p>Version 6 of the State Web Template gets us one step closer to a production version of the <a
+    href="https://designsystem.webstandards.ca.gov/">California
+    Design
+    System</a>. We are excited to iterate on our digital toolset and evolve the state template to a design standard for
+   california. We want to improve the digital experience of Californians and improve how we partner with State agencies.
   </p>
-  <p>This is a living document and changes to this template, the sample and instructional pages
-   are made daily and can be tracked on the <a
-    href="https://github.com/Office-of-Digital-Innovation/California-State-Template" target="_blank">GitHub
-    Repository</a>.</p>
 
-  <p><span class="text-highlight-primary">Note:</span> You will be able to download each version using
-   the GitHub repository links. Look for the &quot;Clone or Download&quot; button on the
-   respective GitHub page.</p>
-  <p>&nbsp;</p>
-
- </article>
-
- <article class="half p-t-md">
-  <div class="panel panel-default">
-   <div class="panel-heading">
-    <h2><span class="ca-gov-icon-download"></span> Available Downloads</h2>
-   </div>
-   <div class="panel-body">
-    <ul class="list-standout">
-     <li>
-      <a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template"
-       target="_blank"><strong>HTML/Dreamwever</strong></a><br>
-      This is the standard HTML/Dreamweaver package with sample content
-     </li>
-     <li>
-      <a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-eleventy"
-       target="_blank"><strong>eleventy</strong></a><br>
-      This is the simple and lightweight eleventy package that includes setup instructions
-     </li>
-     <li>
-      <a href="https://github.com/Office-of-Digital-Services/California-State-Template-MVC-v5"
-       target="_blank"><strong>.NET(MVC)</strong></a><br>
-      This is the .NET MVC package that includes setup instructions
-     </li>
-     <li>
-      <a href="https://github.com/Office-of-Digital-Services/California-State-Template-NET-core"
-       target="_blank"><strong>.NET(Core)</strong></a><br>
-      This is the .NET Core package that includes setup instructions
-     </li>
-
-     <li>
-      <strong><a href="http://caweb.ca.gov/" target="_blank">WordPress
-        CMS</a></strong><br>
-      Please contact
-      <a href="mailto:Info.Eservices@state.ca.gov">Info.Eservices@state.ca.gov</a> for
-      more information
-     </li>
-    </ul>
-   </div>
-  </div>
 
  </article>
 </div>
