updated css classes pages #663

--- a/pages/sample/css-classes-shortcuts.html
+++ b/pages/sample/css-classes-shortcuts.html
@@ -1,8 +1,8 @@
 ---
-title: CSS Style Shortcuts
+title: CSS classes shortcuts
 landing: Components
 layout: page.njk
-permalink: "css-shortcuts/css-units.html"
+permalink: "css-shortcuts/css-classes-shortcuts.html"
 ---
 
 
@@ -12,9 +12,10 @@ permalink: "css-shortcuts/css-units.html"
   <!-- Side navigation -->
   <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/css-shortcuts/css-units.html" id="color-schemes-list" class="active">CSS style shortcuts</a>
+    <li><a href="/css-shortcuts/css-classes-shortcuts.html" id="color-schemes-list" class="active">CSS classes
+      shortcuts</a>
      <ul>
-      <li><a href="/css-shortcuts/shortcuts.html">CSS shortcuts</a></li>
+      <li><a href="/css-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
       <li><a href="/css-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
       <li><a href="/css-shortcuts/spacing.html">Spacing</a></li>
       <li><a href="/css-shortcuts/text-accent.html">Text accent</a></li>
@@ -27,26 +28,25 @@ permalink: "css-shortcuts/css-units.html"
  <div class="col-md-9 m-b-lg">
 
 
-  <h1 class="mt-lg-0">CSS Style Shortcuts</h1>
-  <p>
-   CSS units don't have functionality on their own. So, instead of adding them as components, CSS utility classes can be
-   added to them to display their properties and styles.
+  <h1 class="mt-lg-0">CSS classes shortcuts</h1>
+  <p class="lead">
+   The template uses CSS classes to display a consistent look and feel. We provide these so you can easily find and use
+   these classes.
   </p>
 
-  <h2>Available CSS Units</h2>
+  <h2>Available CSS units</h2>
 
   <div class="row">
    <div class="col-md-4 m-t-md">
-    <a href="/css-shortcuts/shortcuts.html"
+    <a href="/css-shortcuts/utility-css-classes.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-     title="CSS Shortcuts">
+     title="Utility CSS classes">
      <div class="p-a-md d-flex align-content-center">
-      <img src="/images/components/icon-css.jpg" alt="CSS Shortcuts illustration" class="img-fluid">
+      <img src="/images/components/icon-css.jpg" alt="Utility CSS classes illustration" class="img-fluid">
      </div>
      <div class="p-a">
-      <h3 class="h5 m-t-0">CSS Classes Shortcuts</h3>
-      <p class="font-size-16 color-black">The State Web Template's custom utility css classes shortcuts list and
-       definitions
+      <h3 class="h5 m-t-0">Utility CSS classes</h3>
+      <p class="font-size-16 color-black">A list of the template’s custom CSS classes.
       </p>
      </div>
     </a>
@@ -59,8 +59,8 @@ permalink: "css-shortcuts/css-units.html"
       <img src="/images/components/icon-gradient.jpg" alt="Gradient Backgrounds illustration" class="img-fluid">
      </div>
      <div class="p-a">
-      <h3 class="h5 m-t-0">Gradient Backgrounds</h3>
-      <p class="font-size-16 color-black">The State Web Template gradient background examples and their CSS classes </p>
+      <h3 class="h5 m-t-0">Gradient backgrounds</h3>
+      <p class="font-size-16 color-black">Gradient background examples and their CSS classes.</p>
      </div>
     </a>
    </div>
@@ -73,7 +73,7 @@ permalink: "css-shortcuts/css-units.html"
      </div>
      <div class="p-a">
       <h3 class="h5 m-t-0">Spacing</h3>
-      <p class="font-size-16 color-black">Spacing CSS classes that you can assign to an element
+      <p class="font-size-16 color-black">Spacing CSS classes you can assign to an element.
       </p>
      </div>
     </a>
@@ -94,8 +94,8 @@ permalink: "css-shortcuts/css-units.html"
       <img src="/images/components/icon-text.jpg" alt="Text Accent illustration" class="img-fluid">
      </div>
      <div class="p-a">
-      <h3 class="h5 m-t-0">Text Accent Colors</h3>
-      <p class="font-size-16 color-black">Convey meaning through color with a handful of emphasis utility classes</p>
+      <h3 class="h5 m-t-0">Text accent colors</h3>
+      <p class="font-size-16 color-black">Change text colors with a handful of emphasis utility classes.</p>
      </div>
     </a>
    </div>
@@ -107,22 +107,13 @@ permalink: "css-shortcuts/css-units.html"
 
 
 
-  <h3>Additional Bootstrap CSS & Components</h3>
-  <p>
-   We strongly recommend using the documented State Template Content Modules and
-   Components
-   whenever possible; however, for more CSS classes and options as well as components
-   we suggest
-   utilizing what is available in Bootstrap first, before developing your own custom
-   code.
+  <h2>Bootstrap CSS and components or custom code</h2>
+  <p>We recommend that you primarily use the template styles and components.
+   However, if you have a need for more CSS classes or components, we recommend using what's available in Bootstrap
+   first before developing custom code.
   </p>
-  <p>
-   <span class="text-highlight-primary">NOTE:</span> When using custom components and
-   content
-   modules that are not documented as part of the State Template, migration to future
-   versions
-   of the State Template may require additional work.
-  </p>
+  <p>When you use custom code that is not part of the template, it causes you extra work when it’s time to go to the
+   next version of the template or design system.</p>
 
 
  </div>
