--- a/pages/sample/css-spacing.html
+++ b/pages/sample/css-spacing.html
@@ -10,9 +10,9 @@ permalink: "css-shortcuts/spacing.html"
   <!-- Side navigation -->
   <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/css-shortcuts/css-units.html" id="color-schemes-list">CSS style shortcuts</a>
+    <li><a href="/css-shortcuts/css-classes-shortcuts.html" id="color-schemes-list">CSS classes shortcuts</a>
      <ul>
-      <li><a href="/css-shortcuts/shortcuts.html">CSS classes shortcuts</a></li>
+      <li><a href="/css-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
       <li><a href="/css-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
       <li><a href="/css-shortcuts/spacing.html" class="active">Spacing</a></li>
       <li><a href="/css-shortcuts/text-accent.html">Text accent</a></li>
