--- a/pages/sample/css-gradient-backgrounds.html
+++ b/pages/sample/css-gradient-backgrounds.html
@@ -9,10 +9,15 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
   <!-- Side navigation -->
   <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/css-shortcuts/css-units.html" id="color-schemes-list">CSS style shortcuts</a>
+    <li><a href="/css-shortcuts/css-classes-shortcuts.html" id="color-schemes-list">CSS classes shortcuts</a>
      <ul>
-      <li><a href="/css-shortcuts/shortcuts.html">CSS classes shortcuts</a></li>
-      <li><a href="/css-shortcuts/gradient-backgrounds.html" class="active">Gradient backgrounds</a></li>
+      <li><a href="/css-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
+      <li><a href="/css-shortcuts/gradient-backgrounds.html" class="active">Gradient backgrounds</a>
+       <ul>
+        <li><a href="#Linear-gradients">Linear gradients</a></li>
+        <li><a href="#Radial-gradients">Radial gradients</a></li>
+       </ul>
+      </li>
       <li><a href="/css-shortcuts/spacing.html">Spacing</a></li>
       <li><a href="/css-shortcuts/text-accent.html">Text accent</a></li>
      </ul>
@@ -22,13 +27,13 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
   </nav>
  </div>
  <div class="col-md-9 m-b-lg">
-  <h1 class="mt-lg-0">Gradient Backgrounds</h1>
-  <h2>Linear Gradients</h2>
+  <h1 class="mt-lg-0">Gradient backgrounds</h1>
+  <h2 id="Linear-gradients">Linear gradients</h2>
   <!-- Gradients -->
   <div class="row">
    <div class="col-sm-3">
     <h3 class="m-t-0">Primary</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-primary-gradient"></div></code></pre>
    </div>
 
@@ -42,7 +47,7 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
   <div class="row">
    <div class="col-sm-3">
     <h3 class="m-t-0">Highlight</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-highlight-gradient"></div></code></pre>
    </div>
 
@@ -56,7 +61,7 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
   <div class="row">
    <div class="col-sm-3">
     <h3 class="m-t-0">Standout</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-standout-gradient"></div></code></pre>
    </div>
 
@@ -70,7 +75,7 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
   <div class="row">
    <div class="col-sm-3">
     <h3 class="m-t-0">Secondary</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-secondary-gradient"></div></code></pre>
    </div>
 
@@ -83,8 +88,8 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
 
   <div class="row">
    <div class="col-sm-3">
-    <h3 class="m-t-0">Primary-Standout</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h3 class="m-t-0">Primary-standout</h3>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-primary-standout-gradient"></div></code></pre>
    </div>
 
@@ -97,8 +102,8 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
 
   <div class="row">
    <div class="col-sm-3">
-    <h3 class="m-t-0">Primary-Highlight</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h3 class="m-t-0">Primary-highlight</h3>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-primary-highlight-gradient"></div></code></pre>
    </div>
 
@@ -107,12 +112,27 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
    </div>
   </div>
 
+
   <hr class="m-y-lg" />
 
   <div class="row">
    <div class="col-sm-3">
-    <h3 class="m-t-0">Standout-Highlight</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h3 class="m-t-0">Primary-secondary</h3>
+    <h4 class="h4 m-b-sm">Source code:</h4>
+    <pre><code class="overflow-auto"><div class="container height-300 bg-primary-secondary-gradient"></div></code></pre>
+   </div>
+
+   <div class="col-sm-9">
+    <div class="container height-300 bg-primary-secondary-gradient"></div>
+   </div>
+  </div>
+
+  <hr class="m-y-lg" />
+
+  <div class="row">
+   <div class="col-sm-3">
+    <h3 class="m-t-0">Standout-highlight</h3>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-standout-highlight-gradient"></div></code></pre>
    </div>
 
@@ -125,8 +145,8 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
 
   <div class="row">
    <div class="col-sm-3">
-    <h3 class="m-t-0">Danger-Warning</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h3 class="m-t-0">Danger-warning</h3>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-danger-warning-gradient"></div></code></pre>
    </div>
 
@@ -139,8 +159,8 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
 
   <div class="row">
    <div class="col-sm-3">
-    <h3 class="m-t-0">Info-Success</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h3 class="m-t-0">Info-success</h3>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-info-success-gradient"></div></code></pre>
    </div>
 
@@ -152,13 +172,13 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
   <hr class="m-y-lg" />
 
 
-  <h2>Radial Gradients</h2>
+  <h2 id="Radial-gradients">Radial gradients</h2>
 
 
   <div class="row">
    <div class="col-sm-3">
     <h3 class="m-t-0">Gray</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-grey-radialgradient"></div></code></pre>
    </div>
 
@@ -171,8 +191,8 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
 
   <div class="row">
    <div class="col-sm-3">
-    <h3 class="m-t-0">Gray Light</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h3 class="m-t-0">Gray light</h3>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-greylight-radialgradient"></div></code></pre>
    </div>
 
@@ -186,7 +206,7 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
   <div class="row">
    <div class="col-sm-3">
     <h3 class="m-t-0">Primary</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-primary-radialgradient"></div></code></pre>
    </div>
 
@@ -200,7 +220,7 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
   <div class="row">
    <div class="col-sm-3">
     <h3 class="m-t-0">Highlight</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-highlight-radialgradient"></div></code></pre>
    </div>
 
@@ -214,7 +234,7 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
   <div class="row">
    <div class="col-sm-3">
     <h3 class="m-t-0">Standout</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-standout-radialgradient"></div></code></pre>
    </div>
 
@@ -228,7 +248,7 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
   <div class="row">
    <div class="col-sm-3">
     <h3 class="m-t-0">Secondary</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-secondary-radialgradient"></div></code></pre>
    </div>
 
@@ -241,8 +261,8 @@ permalink: "css-shortcuts/gradient-backgrounds.html"
 
   <div class="row">
    <div class="col-sm-3">
-    <h3 class="m-t-0">Secondary Light</h3>
-    <h4 class="h4 m-b-sm">Surce Code:</h4>
+    <h3 class="m-t-0">Secondary light</h3>
+    <h4 class="h4 m-b-sm">Source code:</h4>
     <pre><code class="overflow-auto"><div class="container height-300 bg-secondarylight-radialgradient"></div></code></pre>
    </div>
 
