--- a/pages/sample/progress-tracker.html
+++ b/pages/sample/progress-tracker.html
@@ -6,6 +6,12 @@ permalink: "patterns/progress-tracker.html"
 ---
 <h1 class="mt-lg-0">Progress tracker</h1>
 <p> A progress tracker displays the steps and progress through a journey.</p>
+<p>Use the progress tracker to show:</p>
+<ul>
+  <li>Milestones</li>
+  <li>Timelines</li>
+  <li>Chronological steps</li>
+</ul>
 
 <h2 id="horizontal-tracker">Horizontal tracker</h2>
 <div class="tab-group responsive">
